Supports completing a task
Added class (and tests) to support pulling the ID from the URL.

Adds CSS class to show completed tasks.

--- a/sample_app_1/content/assets/stylesheets/style.css
+++ b/sample_app_1/content/assets/stylesheets/style.css
@@ -12,6 +12,11 @@ table {
   border-collapse: collapse;
 }
 
+tr.task-completed {
+  color: #ccc;
+  text-decoration: line-through;
+}
+
 td, th {
   padding: 3px;
   text-align: left;
