updates to all_about_this demo code

--- a/all_about_this/public/stylesheets/style.css
+++ b/all_about_this/public/stylesheets/style.css
@@ -6,3 +6,11 @@ body {
 a {
   color: #00B7FF;
 }
+
+pre.code-sample {
+  padding: 4px;
+  color: #111;
+  background-color: #eee;
+  border: 1px solid #111;
+  font-family: Monaco, 'Lucida Console', monospace;
+}
