--- a/all_about_this/views/root/index.jade
+++ b/all_about_this/views/root/index.jade
@@ -13,3 +13,7 @@ block content
       a(href='/demo/03') Demo 03
     li
       a(href='/demo/04') Demo 04
+    li
+      a(href='/demo/05') Demo 05
+    li
+      a(href='/demo/06') Demo 06
